--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -26,13 +26,14 @@ $link-color: 				#1a5a96;
 /* Application */
 $app-bg: 					#F1f1f1;
 $app-base-color: 			#494949;
+$app-base-font-size:		1.4rem;
 
 /* Coporate Colors */
 $corp-blue: 				#003366;
 $corp-gold: 				#fcba19;
 
 /* Fonts */
-$font-color-grey: 			#888;
+$font-color-grey: 			#666;
 $font-color-disabled: 		#CCC;
 
 /* Footer */
@@ -133,8 +134,38 @@ body {
 	-ms-overflow-style: scrollbar;
 }
 
+a {
+	cursor: pointer;
+}
+
 hr {
 	border-top: 1px solid #DDD;
+}
+
+pre {
+	margin: 0;
+	padding: 0;
+	font-family: $font-family-sans-serif;
+	font-size: $app-base-font-size;
+	background-color: transparent;
+	border: 0;
+	white-space: pre-wrap;
+
+	p {
+		margin: 0;
+	}
+
+	ul {
+		margin-bottom: 0;
+	}
+
+	li {
+		margin-top: -2rem;
+
+		&:last-child {
+			margin-bottom: -2rem;
+		}
+	}
 }
 
 
@@ -147,21 +178,6 @@ hr {
 .ng-cloak, 
 .x-ng-cloak {
   display: none !important;
-}
-
-pre {
-	padding: 0;
-	margin: 0;
-	font-size: inherit;
-	font-family: $font-family-sans-serif;
-	line-height: inherit;
-	background-color: transparent;
-	border: 0;
-	white-space: pre-wrap;       /* CSS 3 */
-	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	word-break: normal;
 }
 
 .flex-row {
@@ -184,6 +200,16 @@ pre {
 
 .placeholder-value {
 	color: $placeholder-value-color;
+}
+
+.value {
+	color: $font-color-grey;
+}
+
+pre.value {
+	strong {
+		color: $app-base-color;
+	}
 }
 
 .btn-list .btn {
@@ -263,22 +289,6 @@ a.control-label:hover,
 }
 
 
-// -------------------------
-// GENERALLY SPEAKING...
-// -------------------------
-
-td h4 {
-	margin-top: 0;
-}
-th > .progress {
-	margin-bottom: 0;
-}
-
-ul > li > h3 {
-	margin-top: 5px;
-}
-
- 
 // -------------------------
 // HELPER CLASSES...
 // -------------------------
@@ -704,11 +714,6 @@ h3.panel-title {
 
 .map-filter .form-inline .form-control-static {
 	margin-top: 1px;
-}
-
-.panel label + p,
-.panel label + ul {
-	margin-bottom: 15px;
 }
 
 .panel .project-small-tombstone label + p,
@@ -2577,7 +2582,7 @@ $file-browser-item-active: #2b5580;
 
 /* RICH TEXT EDITOR
 ------------------------------ */
-.form-group .mce-panel {
+.mce-panel {
 	background-color: #FFF;
 }
 
@@ -2666,16 +2671,10 @@ textarea {
 }
 
 .has-error {
-	/* Fix - Style the RTF Widget */
-	.mce-tinymce {
-		border: 1px solid $danger-border;
-	}
-
 	.control-label em {
 		color: $danger-text;
 	}
 }
-
 
 
 /* INFOBLOCKS 
@@ -2754,6 +2753,33 @@ textarea {
 			left: 1.5rem;
 			top: 1.2rem;
 			margin: 0;
+		}
+	}
+}
+
+
+/* LIST (INLINE)
+------------------------------ */
+.anchor-list {
+	margin-bottom: 0.8rem;
+	padding: 0;
+	list-style-type: none;
+
+	li {
+		display: inline;
+
+		&:before {
+			margin-left: -0.2rem;
+			content: ', ';
+		}
+
+		&:first-child::before {
+			margin-left: 0;
+			content: '';
+		}
+
+		a {
+			text-decoration: underline;
 		}
 	}
 }
@@ -2960,10 +2986,6 @@ textarea {
 			}
 		}
 	}
-}
-
-.panel-body {
-	padding: 2rem;
 }
 
 .panel-footer {
@@ -4109,7 +4131,6 @@ section.project-info {
 
 .detail-row {
 	margin-bottom: 1.5rem;
-	font-size: 1.2rem;
 	
 	label,
 	span.value {
@@ -4125,24 +4146,8 @@ section.project-info {
 		text-shadow: 0 0 0 #FFF;
 	}
 	
-	span.value {
-		color: #888;
-	}
-	
 	span.value.wrap-text {
 		white-space:normal;
-	}
-
-	pre.value {
-		color: #888;
-
-		p {
-			line-height: 2rem;
-
-			&:last-child {
-				margin-bottom: 0;
-			}
-		}
 	}
 }
 
@@ -4784,9 +4789,6 @@ tmpl-template-render {
 }
 
 
-
-
-
 /* TEMPLATE DOCUMENT EDITOR VIEW
 ----------------------------- */
 .attachments {
@@ -4794,7 +4796,6 @@ tmpl-template-render {
 		margin: 0;
 	}
 }
-
 
 /* UPLOAD DOCUMENTS VIEW
 ----------------------------- */
@@ -4851,6 +4852,20 @@ tmpl-template-render {
 
 	.pillar-col {
 		width: 30%;
+	}
+}
+
+.vc-details-panel-body {
+	padding-bottom: 0;
+}
+
+.vc-rtf-editor {
+	.mce-tinymce {
+		border: 1px solid #FFF;
+	}
+
+	.mce-panel {
+		background: #FFF;
 	}
 }
 
