--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -13,46 +13,56 @@
 </div>
 
 <div class="view-body-container">
-	<div class="vc-details">
-		<div class="row">
-			<div class="col-md-4 detail-row">
-				<label>Title</label>
-				<span class="value">{{vc.title}}</span>
-			</div>
-			<div class="col-md-4 detail-row">
-				<label>Pillar</label>
-				<span class="value">{{vc.pillar}}</span>
-			</div>
-			<div class="col-md-4 detail-row">
-				<label>Name</label>
-				<span class="value">{{vc.name}}</span>
-			</div>
-			<div class="col-md-4 detail-row">
-				<label>Type</label>
-				<span class="value">{{vc.type}}</span>
-			</div>
+	<!-- DETAILS -->
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Details</h2>
 		</div>
-		<div class="row" ng-if="vc.subComponents.length > 0">
-			<div class="col-md-4 detail-row">
-				<label>Sub Components</label>
-				<div ng-repeat="o in vclist"
-						ui-sref="p.vc.detail({vcId:o._id})">
-					<a class="btn btn-link btn-sm" >{{o.title}}</a>
+		<div class="panel-body vc-details-panel-body">
+			<div class="row">
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Title</label>
+					<span class="value">{{vc.title}}</span>
+				</div>
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Pillar</label>
+					<span class="value">{{vc.pillar}}</span>
+				</div>
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Name</label>
+					<span class="value">{{vc.name}}</span>
+				</div>
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Type</label>
+					<span class="value">{{vc.type}}</span>
+				</div>
+				<div class="col-sm-12 detail-row" ng-if="vc.subComponents.length > 0">
+					<label>Sub-Components</label>
+					<ul class="anchor-list">
+						<li ng-repeat="o in vclist" ui-sref="p.vc.detail({vcId:o._id})">
+							<a class="title">{{o.title}}</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="row" ng-if="vc.description">
-			<div class="col-sm-12 detail-row">
-				<label>Description</label>
-				<pre class="value wrap-text" id="shortDesc" ng-bind-html="vc.description"></pre>
-			</div>
+	</div><!-- / DETAILS -->
+	
+	<!-- DESCRIPTION -->
+	<div class="panel panel-default" ng-if="vc.description">
+		<div class="panel-heading"><h2>Description</h2></div>
+		<div class="panel-body">
+			<pre class="value wrap-text" id="shortDesc" ng-bind-html="vc.description"></pre>
 		</div>
+	</div>
 
-		<div class="row" ng-if="vc.indicators">
-			<div class="col-sm-12 detail-row">
-				<label>Indicators</label>
-				<pre class="value wrap-text" id="indicators" ng-bind-html="vc.indicators"></pre>
-			</div>
+	<!-- INDICATORS -->
+	<div class="panel panel-default" ng-if="vc.indicators">
+		<div class="panel-heading">
+			<h2>Indicators</h2>
+		</div>
+		<div class="panel-body">
+			<pre class="value wrap-text" id="indicators" ng-bind-html="vc.indicators"></pre>
 		</div>
 	</div>
 
