Hide all Internal Documents sections - just use hidden on the UI for now.

--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -52,7 +52,7 @@
     <section>
         <div x-content-document ng-model="artifact.additionalDocuments" title="'Additional Documents'" project="project" artifact="artifact" doc-location-code="additional" editable="mode === 'edit'"></div>
     </section>
-    <section>
+    <section hidden>
         <div x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project" artifact="artifact" doc-location-code="internal" editable="mode === 'edit'"></div>
     </section>
     <!-- / SUPPORTING, ADDITIONAL, INTERNAL DOCUMENTS -->
