--- a/modules/artifacts/client/views/partial.artifact.artifacts.html
+++ b/modules/artifacts/client/views/partial.artifact.artifacts.html
@@ -43,7 +43,7 @@
          editable="editable"></div>
   </div>
 
-  <div class="col-sm-12">
+  <div class="col-sm-12" hidden>
     <div x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project"
          editable="editable"></div>
   </div>
