Hiding the Sub-components label when no sub-components are published
- Adding button group to bottom of view (user request)
- Fixing the publish column in Valued components

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -44,7 +44,7 @@
 		</section>
 
 		<!-- PROJECT PHASES -->
-		<section class="project-phases hidden" ng-if="environment === 'EAO'">
+		<section class="project-phases" ng-if="environment === 'EAO'">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h2>Project Timeline</h2>
