--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2321,12 +2321,12 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 
 .back-btn {
 	font-weight: bold;
+	text-decoration: underline;
 	
 	.glyphicon {
 		margin-top: 0;
-		margin-left: -1rem;
+		margin-left: -0.5rem;
 		margin-right: 0.5rem;
-		font-size: 1.5rem;
 	}
 }
 
@@ -4857,6 +4857,12 @@ tmpl-template-render {
 
 .vc-details-panel-body {
 	padding-bottom: 0;
+}
+
+.vc-list {
+	.status-col {
+		width: 10rem;
+	}
 }
 
 .vc-rtf-editor {
