--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -25,18 +25,18 @@
 					<span class="value">{{vc.title}}</span>
 				</div>
 				<div class="col-sm-6 col-lg-3 detail-row">
-					<label>Pillar</label>
-					<span class="value">{{vc.pillar}}</span>
-				</div>
-				<div class="col-sm-6 col-lg-3 detail-row">
 					<label>Name</label>
 					<span class="value">{{vc.name}}</span>
+				</div>
+				<div class="col-sm-6 col-lg-3 detail-row">
+					<label>Pillar</label>
+					<span class="value">{{vc.pillar}}</span>
 				</div>
 				<div class="col-sm-6 col-lg-3 detail-row">
 					<label>Type</label>
 					<span class="value">{{vc.type}}</span>
 				</div>
-				<div class="col-sm-12 detail-row" ng-if="vc.subComponents.length > 0">
+				<div class="col-sm-12 detail-row" ng-if="vclist.length > 0">
 					<label>Sub-Components</label>
 					<ul class="anchor-list">
 						<li ng-repeat="o in vclist" ui-sref="p.vc.detail({vcId:o._id})">
