Small improvement to Public Comment list
- Added title tag to the attachments icon (displays count)
- Added hidden remove button for VC's for future dev.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3132,7 +3132,7 @@ $nav-tab-active: #1a5a96;
 		text-align: right;
 		
 		.btn {
-			margin-top: 0.32rem;
+			margin-top: 0.35rem;
 			padding-left: 0.8rem;
 			padding-right: 0.8rem;
 			background: transparent;
@@ -3656,7 +3656,7 @@ $nav-tab-active: #1a5a96;
 				th {
 					margin-right: 0.5rem;
 					margin-bottom: 1rem;
-					padding-left: 1.5rem;
+					padding: 0.5rem 1rem 0.5rem 1.5rem;
 					display: block;
 					float: left;
 					text-align: center;
