--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="panel panel-default">
-		<table ng-table="tableParams" show-filter="true" class="table table-hover table-striped vc-table">
+		<table ng-table="tableParams" show-filter="true" class="table table-hover vc-table">
 			<tr ng-repeat="o in $data" ui-sref="p.vc.detail({vcId:o._id})">
 				<td data-title="'Title'"    filter="{'title':'text'}"     sortable="'title'"    >{{o.title}}</td>
 				<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
@@ -26,6 +26,9 @@
 					<a class="btn btn-link btn-sm" ng-if="o.userPermissions.write" title="Edit Valued Component" ng-click="$event.stopPropagation()" ui-sref="p.vc.edit({vcId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
+					<button class="btn btn-default btn-sm hidden" title="Remove Valued Component from Project" ng-click="$event.stopPropagation();">
+						<span class="glyphicon glyphicon-remove"></span>
+					</button>
 					<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="o"></tmpl-permissions-gear>
 				</td>
 			</tr>
