--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -21,7 +21,10 @@
         <div class="public-comment-panel">
             <table ng-table="s.tableParams" show-filter="true" class="eao-comment-table table table-hover">
                 <tr class="comment-row" ng-repeat="o in $data" ng-click="s.detail(o)">
-                    <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by / Comment'" filter="{'comment':'text'}" sortable="'comment'">
+                  <td ng-if="authentication.user" class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'ID'" sortable="'commentId'">
+                    {{o.commentId}}
+                  </td>
+                  <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by / Comment'" filter="{'comment':'text'}" sortable="'comment'">
                         <h2 ng-if="::o.isAnonymous" class="comment-title">Anonymous</h2>
                         <h2 ng-if="::!o.isAnonymous" class="comment-title">{{ ::o.author }}</h2>
                         <div ng-if="o.comment" ng-init="toggleProject.desc = (false)">
