ESM-442 - add a couple of changes to lock down some buttons.  The Edit Project button is locked down with project.userCan.write (write privileges on the project).  The Project Settings section (Manage Roles & Permissions) requires the manageRoles or managePermissions.  The ability to edit a Public Comment Period requires canCreatePeriod.

--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -39,7 +39,7 @@
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 						<a class="btn btn-default btn-sm"
 							ng-click="$event.stopPropagation()"
-							ng-if="p.userCan.write"
+							ng-if="p.userCan.createCommentPeriod"
 							ui-sref="p.commentperiod.edit({periodId:p._id})" href>
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
