--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -4,7 +4,7 @@
 		<h1>{{ project.name }}</h1>
 		<div class="actions">
 			<div class="actions-group" ng-if="environment === 'EAO' && authentication.user">
-				<a class="btn btn-default btn-sm" ui-sref="p.edit({pId:o._id})">Edit Project</a>
+				<a class="btn btn-default btn-sm" ui-sref="p.edit({pId:o._id})" ng-if="project.userCan.write">Edit Project</a>
 				<a class="btn btn-success btn-sm" ng-click="publishProject()" ng-if="!project.isPublished">Publish Project</a>
 			</div>
 			<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="project"></tmpl-permissions-gear>
@@ -16,7 +16,7 @@
 		<div class="panel panel-default project-timeline hidden">
 			<div class="panel-heading"><h2>Project Timeline</h2></div>
 			<div class="timeline-container">
-				<div class="phase" 
+				<div class="phase"
 					ng-class="{'active': o.status == 'In Progress', 'complete': o.completed}" ng-repeat="o in project.phases">
 					<span class="phase-name">{{o.name}}</span>
 				</div>
