--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -4,7 +4,7 @@
 	<button type="button" class="btn btn-default close" aria-label="Close" ng-click="s.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-    <h3 class="modal-title">Public Comment <span ng-if="authentication.user"> ({{s.comment.commentId}})</span></h3>
+    <h3 class="modal-title">Public Comment <span ng-if="authentication.user">({{s.comment.commentId}})</span></h3>
 </div>
 <div class="modal-body">
 
@@ -24,7 +24,7 @@
     <!-- COMMENT INFO -->
     <section>
         <div class="comment-author-info">
-            <span class="author"><strong>Posted by {{ ::s.comment.author }}</strong></span>
+            <span class="author"><strong>Posted by <span ng-if="s.comment.author">{{ ::s.comment.author }}</span><span ng-if="!s.comment.author">Anonymous</span></strong></span>
             <span class="pull-right label {{ s.alertType }}" ng-if="s.alertType">{{ s.alertNotesLabel }} &nbsp;-&nbsp; by {{ s.comment.updatedBy.displayName }}</span>
             <span class="date">
                 {{s.comment.dateAdded | amDateFormat:'MMMM Do, YYYY'}} <span ng-if="s.comment.location"> &nbsp;|&nbsp; {{ ::s.comment.location }}</span>
@@ -35,11 +35,11 @@
         </div>
     </section><!-- / COMMENT INFO -->
 
-    <section class="pillar-vcs">
-        <div class="tag-list">
-            <span ng-if="s.comment.pillars">{{s.comment.pillars.join (', ')}} </span><span ng-if="s.comment.topics">{{s.comment.topics.join (', ')}}</span>
+    <section class="comment-vcs">
+        <div class="tag-list" ng-if="s.comment.pillars.length > 1">
+            <span class="pillars">{{s.comment.pillars.join (', ')}}</span><span>{{s.comment.topics.join (', ')}}</span>
         </div>
-        <button type="button" class="btn btn-default btn-sm" ng-if="s.period.userCan.classifyComments" title="Assign Valued Components"
+        <button class="btn btn-default btn-sm" type="button" ng-if="s.period.userCan.classifyComments" title="Assign Valued Components"
             x-vc-chooser
             x-project="s.project"
             x-current="s.comment.valuedComponents"
