--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container">
-	<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;Documents</h1>
+	<h1>Documents</h1>
 	<!-- <tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 </div>
 
