Valued Component text changes
- Changed 'Sub-components' to 'Associated Valued & Pathway Components'
- Fixed an issue with the type column sorting on the name column in the vc-list.html

--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -26,8 +26,8 @@
 					filter="{'pillar':'text'}" 
 					sortable="'pillar'">{{o.pillar}}</td>
 				<td data-title="'Type'" 
-					filter="{'name':'text'}" 
-					sortable="'name'" >{{o.type}}</td>
+					filter="{'type':'text'}" 
+					sortable="'type'" >{{o.type}}</td>
 				<td class="status-col" header-class="'status-col'" 
 					ng-if="authentication.user" 
 					data-title="'Status'" 
