--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="row form-group">
 				<div class="col-sm-12">
-					<label for="subComponents" class="control-label">Sub-Components</label>
+					<label for="subComponents" class="control-label">Associated Valued & Pathway Components</label>
 					<ul class="anchor-list" ng-if="vclist.length > 0">
 						<li ng-repeat="o in vclist">
 							<a ui-sref="p.vc.detail({vcId:o._id})">{{o.title}}</a>
@@ -60,7 +60,7 @@
 						x-project="project"
 						x-vc="vc"
 						x-vcs="vcs"
-						x-vclist="vclist">+ Add Sub-Components
+						x-vclist="vclist">+ Add Components
 					</button>
 				</div>
 			</div>
