--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -37,7 +37,7 @@
 					<span class="value">{{vc.type}}</span>
 				</div>
 				<div class="col-sm-12 detail-row" ng-if="vclist.length > 0">
-					<label>Sub-Components</label>
+					<label>Associated Valued & Pathway Components</label>
 					<ul class="anchor-list">
 						<li ng-repeat="o in vclist" ui-sref="p.vc.detail({vcId:o._id})">
 							<a class="title">{{o.title}}</a>
