--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -16,7 +16,7 @@
 			<td ng-if="environment === 'MEM'" data-title="'Permit'" filter="{'memPermitID':'text'}" sortable="'memPermitID'">
 				{{o.memPermitID}}
 			</td>
-			<td header-class="'type-col'" data-title="'Type'" filter="{type:'select'}" filter-data="projectList.typeArray"sortable="'type'">
+			<td header-class="'type-col'" data-title="'Type'" filter="{type:'select'}" filter-data="projectList.typeArray" sortable="'type'">
 				{{o.type}}
 			</td>
 			<td header-class="'region-col'" data-title="'Region'" filter="{region:'select'}" filter-data="projectList.regionArray" sortable="'region'">
@@ -36,8 +36,8 @@
 				sortable="'eacDecision'">
 				{{o.eacDecision}}
 			</td>
-      <td header-class="'region-col'" data-title="'PCP'"  sortable="'openCommentPeriod'">
-        {{o.openCommentPeriod}}
+      <td header-class="'region-col'" data-title="'PCP'" filter="{openCommentPeriod:'select'}" filter-data="projectList.openPCPArray" sortable="'openCommentPeriod'">
+        {{o.openCommentPeriod ? 'Open' : 'Closed'}}
       </td>
 		</tr>
 
